[package]
name = "guardrail"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
description = "Defensive guardrails for AI coding agents — block destructive commands via hooks"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hayai = { git = "https://github.com/pleme-io/hayai", tag = "hayai-v0.1.4" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[lints.clippy]
pedantic = "warn"
